--- a/addprise2/package.json
+++ b/addprise2/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "karma-firefox-launcher": "^1.0.1",
+    "koa": "^2.3.0",
     "selenium-webdriver": "^3.5.0"
   }
 }
