--- a/addprise2/package.json
+++ b/addprise2/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -17,8 +18,12 @@
     "karma-phantomjs-launcher": "^1.0.4"
   },
   "dependencies": {
+    "co": "^4.6.0",
     "karma-firefox-launcher": "^1.0.1",
     "koa": "^2.3.0",
+    "koa-better-serve": "^2.0.6",
+    "koa-router": "^7.2.1",
+    "koa-swig": "^2.2.1",
     "selenium-webdriver": "^3.5.0"
   }
 }
