引入axios，完成点击数据库+1操作，初次加载显示数据库记录

--- a/addprise2/package.json
+++ b/addprise2/package.json
@@ -18,6 +18,7 @@
     "karma-phantomjs-launcher": "^1.0.4"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "co": "^4.6.0",
     "karma-firefox-launcher": "^1.0.1",
     "koa": "^2.3.0",
