--- a/addprise2/package.json
+++ b/addprise2/package.json
@@ -15,7 +15,8 @@
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.4"
+    "karma-phantomjs-launcher": "^1.0.4",
+    "path": "^0.12.7"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -24,7 +25,11 @@
     "koa": "^2.3.0",
     "koa-better-serve": "^2.0.6",
     "koa-router": "^7.2.1",
+    "koa-simple-router": "^0.2.0",
+    "koa-static": "^4.0.1",
     "koa-swig": "^2.2.1",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "selenium-webdriver": "^3.5.0"
   }
 }
