--- a/addprise3/package.json
+++ b/addprise3/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "css-loader": "^0.28.7",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-rename": "^1.2.2",
@@ -24,7 +25,9 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "path": "^0.12.7",
-    "supertest": "^3.0.0"
+    "style-loader": "^0.18.2",
+    "supertest": "^3.0.0",
+    "webpack": "^3.6.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
