--- a/addprise3/package.json
+++ b/addprise3/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -27,7 +28,8 @@
     "path": "^0.12.7",
     "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
     "axios": "^0.16.2",
