--- a/addprise2/package.json
+++ b/addprise2/package.json
@@ -10,17 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "path": "^0.12.7",
-    "supertest": "^3.0.0"
+    "path": "^0.12.7"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -32,7 +28,6 @@
     "koa-simple-router": "^0.2.0",
     "koa-static": "^4.0.1",
     "koa-swig": "^2.2.1",
-    "mocha": "^3.5.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "selenium-webdriver": "^3.5.0"
