--- a/addprise3/package.json
+++ b/addprise3/package.json
@@ -4,34 +4,40 @@
   "description": "add praise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpackdev": "better-npm-run webpack:dev",
+    "webpackprod": "better-npm-run webpack:prod"
+  },
+  "betterScripts": {
+    "webpack:dev": {
+      "command": "webpack --config  --progress --colors",
+      "env": {
+        "NODE_ENV": "dev"
+      }
+    },
+    "webpack:prod": {
+      "command": "webpack --config  --progress --colors",
+      "env": {
+        "NODE_ENV": "prod"
+      }
+    }
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
-    "html-webpack-plugin": "^2.30.1",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "path": "^0.12.7",
-    "style-loader": "^0.18.2",
-    "supertest": "^3.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
