--- a/addprise3/package.json
+++ b/addprise3/package.json
@@ -25,19 +25,25 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "better-npm-run": "^0.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "html-webpack-plugin": "^2.30.1",
     "jasmine-core": "^2.7.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "path": "^0.12.7",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "webpack-dev-server": "^2.8.2",
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
