--- a/addprise3/package.json
+++ b/addprise3/package.json
@@ -9,13 +9,13 @@
   },
   "betterScripts": {
     "webpack:dev": {
-      "command": "webpack --config  --progress --colors",
+      "command": "webpack  --progress --colors",
       "env": {
         "NODE_ENV": "dev"
       }
     },
     "webpack:prod": {
-      "command": "webpack --config  --progress --colors",
+      "command": "webpack  --progress --colors",
       "env": {
         "NODE_ENV": "prod"
       }
@@ -31,6 +31,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "better-npm-run": "^0.1.0",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
@@ -40,8 +41,11 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
+    "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
+    "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2",
     "webpack-livereload-plugin": "^0.11.0"
   },
